--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -474,7 +474,10 @@ input, button, textarea {
 	padding-top: 8px;
 }
 
-.admin-bar .container a, .admin-bar .container input[type=submit] {
+.admin-bar .container a, 
+.admin-bar .container input[type="submit"],
+.admin-bar .container input[type="button"]
+{
 	display:block;
 	float:left;
 	padding:15px;
@@ -494,7 +497,14 @@ input, button, textarea {
 	transition: all 0.15s ease-in-out 0s;
 }
 
-.admin-bar .container a:hover, .admin-bar .container input[type=submit]:hover { background-color:red; }
+.admin-bar .container a:hover, 
+.admin-bar .container input[type="submit"]:hover,
+.admin-bar .container input[type="button"]:hover,
+.admin-bar .container input[type="submit"]:focus,
+.admin-bar .container input[type="button"]:focus
+{
+	background-color:red;
+}
 
 .admin-bar .container a:first-of-type
 {
@@ -889,7 +899,9 @@ input, button, textarea {
 }
 
 .admin-content input[type="text"],
-.admin-content input[type="password"]
+.admin-content input[type="password"],
+.form-table input[type="text"],
+.form-table input[type="password"]
 {
 	font-size: 12px;
 	padding: 9px;
@@ -1310,6 +1322,108 @@ p.submit input[type="button"] {
 	-webkit-appearance: none;
 }
 
+
+/**** MODAL DIALOG ****/
+.modal_dialog
+{
+	display: none;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 9999;
+	cursor: pointer;
+}
+
+.modal_dialog > div
+{
+	width: 960px;
+	position: relative;
+	margin: 0 auto;
+	background-color: #fff;
+	padding: 0px;
+	-webkit-box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    0px 0px 30px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         0px 0px 30px 0px rgba(50, 50, 50, 0.75);
+	cursor: default;
+	border: 2px solid #000;
+	box-sizing: border-box;
+}
+
+.modal_dialog div.cont
+{
+	position: relative;
+	margin: 0 auto;
+}
+
+.modal_dialog div.cont:after
+{
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+
+.modal_dialog div.close
+{
+	position:absolute; 
+	width:28px;
+	height:28px;
+	top:0px;
+	right:0px;
+	display:block;
+	color:#FFF;
+	cursor: pointer;
+	background-color: #000;
+	transition: all 0.15s ease-in-out 0s;
+}
+
+.modal_dialog div.close:hover
+{
+	background-color: red;
+}
+
+.modal_dialog div.close:before
+{
+    font-family: FontAwesome;
+    content: "\f00d";
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 20px;
+    color: #FFFFFF;
+    width: 100%;
+    line-height: 28px;
+    height: 28px;
+    top: -1px;
+    left: 0px;
+    position: relative;
+}
+
+.modal_dialog div.cont h4
+{
+    margin: 0px;
+    width: 100%;
+    height: 28px;
+    line-height: 28px;
+    padding-left: 4px;
+    box-sizing: border-box;
+    color: #fff;
+    background-color: #272727;
+}
+
+/**** MODAL DIALOG ****/
+
+.post_advanced .inner
+{
+	padding-left: 8px;
+	padding-right: 8px;
+}
+
 @media only screen and (max-width: 800px)
 {
 	.form-table tbody tr th,
@@ -1328,7 +1442,10 @@ p.submit input[type="button"] {
 		min-width: 100%;
 	}
 	
-	.admin-bar .container a, .admin-bar .container input[type=submit] {
+	.admin-bar .container a,
+	.admin-bar .container input[type="submit"],
+	.admin-bar .container input[type="button"]
+	{
 		padding: 8px;
 		margin: 15px 1px 14px 0;
 	}
@@ -1357,7 +1474,8 @@ p.submit input[type="button"] {
 		clear: both;
 	}
 	
-	.general_filter input[type="submit"]
+	.general_filter input[type="submit"],
+	.general_filter input[type="button"]
 	{
 		margin-top: 8px;
 	}
