--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,5 +1,5 @@
 /***** KAJAX *****/
-@-webkit-keyframes kajax-loader-spinner
+@-webkit-keyframes loader-spinner
 {
 	0% {
 		-webkit-transform:rotate(0deg);
@@ -12,7 +12,7 @@
 	}
 }
 
-@-moz-keyframes kajax-loader-spinner
+@-moz-keyframes loader-spinner
 {
 	0%
 	{
@@ -26,7 +26,7 @@
 	}
 }
 
-@-o-keyframes kajax-loader-spinner
+@-o-keyframes loader-spinner
 {
 	0%
 	{
@@ -40,7 +40,7 @@
 	}
 }
 
-@-ms-keyframes kajax-loader-spinner
+@-ms-keyframes loader-spinner
 {
 	0%
 	{
@@ -54,7 +54,7 @@
 	}
 }
 
-@keyframes kajax-loader-spinner
+@keyframes loader-spinner
 {
 	0%
 	{
@@ -106,11 +106,11 @@
 	border-top-color:#282B2E;
 	border-left-color:#282B2E;
 	border-radius:20px;
-	-webkit-animation:kajax-loader-spinner 400ms linear infinite;
-	-moz-animation:kajax-loader-spinner 400ms linear infinite;
-	-ms-animation:kajax-loader-spinner 400ms linear infinite;
-	-o-animation:kajax-loader-spinner 400ms linear infinite;
-	animation:kajax-loader-spinner 400ms linear infinite;
+	-webkit-animation:loader-spinner 400ms linear infinite;
+	-moz-animation:loader-spinner 400ms linear infinite;
+	-ms-animation:loader-spinner 400ms linear infinite;
+	-o-animation:loader-spinner 400ms linear infinite;
+	animation:loader-spinner 400ms linear infinite;
 }
 /***** KAJAX *****/
 
@@ -1353,7 +1353,8 @@ p.submit input[type="button"] {
 	border: 2px solid #000;
 	box-sizing: border-box;
 	transition: all 0.3s ease-in-out 0s;
-	transform: translateY(10%) rotateX(40deg);
+	transform: translateY(10%) scale(0.9,0.9);
+	transform-origin: 50% -50%;
 }
 
 .modal_dialog.modal_dialog_visible
@@ -1366,12 +1367,11 @@ p.submit input[type="button"] {
 {
 	visibility: visible;
 	opacity: 1;
-	transform: translateY(0%) rotateX(0deg);
+	transform: translateY(0%) scale(1,1);
 }
 
 .modal_dialog div.cont
 {
-	position: relative;
 	margin: 0 auto;
 }
 
@@ -1433,6 +1433,43 @@ p.submit input[type="button"] {
     background-color: #272727;
 }
 
+.modal_dialog_notransition
+{
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-o-transition: none !important;
+	-ms-transition: none !important;
+	transition: none !important;
+}
+
+.modal_dialog .loading
+{
+	width:100%;
+	height:100%;
+	position:absolute;
+	top:0;
+	left:0;
+}
+
+.modal_dialog .loading-spinner
+{
+	position:relative;
+	top: 50%;
+	transform: translateY(-50%);
+	margin:0px auto;
+	z-index:4000;
+	width:24px;
+	height:24px;
+	border:solid 2px transparent;
+	border-top-color:#282B2E;
+	border-left-color:#282B2E;
+	border-radius:20px;
+	-webkit-animation:loader-spinner 400ms linear infinite;
+	-moz-animation:loader-spinner 400ms linear infinite;
+	-ms-animation:loader-spinner 400ms linear infinite;
+	-o-animation:loader-spinner 400ms linear infinite;
+	animation:loader-spinner 400ms linear infinite;
+}
 /**** MODAL DIALOG ****/
 
 .post_advanced .inner
