--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -901,7 +901,8 @@ input, button, textarea {
 .admin-content input[type="text"],
 .admin-content input[type="password"],
 .form-table input[type="text"],
-.form-table input[type="password"]
+.form-table input[type="password"],
+.post_tags input[type="text"]
 {
 	font-size: 12px;
 	padding: 9px;
@@ -912,6 +913,12 @@ input, button, textarea {
 	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 	-webkit-appearance: none;
+}
+
+.post_tags input[type="text"]
+{
+	background-color: #FCFCFC;
+	font-size: 14px;
 }
 
 .admin-content select,
@@ -941,10 +948,11 @@ input, button, textarea {
 .admin-content input[type="password"]:hover,
 .admin-content input[type="password"]:focus,
 .admin-content input[type="button"]:focus
+.post_tags input[type="text"]:hover,
+.post_tags input[type="text"]:focus
 {
 	background-color: #FCFCFC;
 }
-
 
 .admin-content input[type="text"].disabled, 
 .admin-content input[type="text"]:disabled, 
@@ -953,7 +961,9 @@ input, button, textarea {
 .admin-content select.disabled, 
 .admin-content select:disabled, 
 .admin-content textarea.disabled,
-.admin-content textarea:disabled
+.admin-content textarea:disabled,
+.post_tags input[type="text"].disabled,
+.post_tags input[type="text"]:disabled
 {
 	background: rgba(255,255,255,.5);
 	border-color: rgba(222,222,222,.75);
@@ -965,7 +975,8 @@ input, button, textarea {
 .admin-content input[type="text"].error,  
 .admin-content input[type="password"].error, 
 .admin-content select.error, 
-.admin-content textarea.error
+.admin-content textarea.error,
+.post_tags input[type="text"].error
 {
 	background: rgba(255,255,255,.5);
 	border-color: rgba(217, 83, 79, 0.75);
@@ -1476,6 +1487,60 @@ p.submit input[type="button"] {
 {
 	padding-left: 8px;
 	padding-right: 8px;
+}
+
+.post_tags input[type="button"]
+{
+	display: inline-block;
+	padding: 8px;
+	font-weight: bold;
+	text-decoration: none;
+	color: #ffffff;
+	border: none;
+	cursor: pointer;
+	background-color: black;
+	border-radius: 5px;
+	-khtml-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	font-size: 15px;
+	color: white !important;
+	transition: all 0.15s ease-in-out 0s;
+}
+
+.post_tags input[type="button"]:hover
+{
+	background-color: red;
+}
+
+.post_tags p
+{
+	margin: 0;
+	color: #666;
+	font-size: 13px;
+}
+
+.post_tags .tags
+{
+	margin-top: 8px;
+	width: 100%;
+}
+
+.post_tags .tag
+{
+	float: left;
+	padding: 4px;
+}
+
+.post_tags .tags .tag a
+{
+	color: #000;
+	transition: all 0.15s ease-in-out 0s;
+}
+
+.post_tags .tags .tag a:hover
+{
+	color: red;
 }
 
 @media only screen and (max-width: 800px)
